file(GLOB PROFILE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/profile/src/*.cpp)
pybind11_add_module(profile ${PROFILE_SRC})
target_include_directories(profile PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/profile/include>
  $<INSTALL_INTERFACE:include>
)
STRING(REPLACE ${CMAKE_SOURCE_DIR} ${SKBUILD_PROJECT_NAME} RELATIVE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
install(TARGETS profile LIBRARY DESTINATION ${RELATIVE_DIR})